--- a/site/nginx/files/index.html
+++ b/site/nginx/files/index.html
@@ -1,8 +1,6 @@
-<html>
-  <head>
-    <title>Hello from Puppet!</title>
-  </head>
-  <body>
-    <h1>Hello World, Puppet is Fun!</h1>
-  </body>
-</html>
+<HTML>
+<HEAD>Testing out my NGINX homepage</HEAD>
+<BODY>
+<H1> Hey Ravi, NGINX worked. HIGH FIVE!</H1>
+</BODY>
+</HTML>
